<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stepListItemParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.github.vipulasri.timelineview.TimelineView
        android:id="@+id/time_marker"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:line="@color/colorPrimaryDark"
        app:linePadding="5dp"
        app:lineSize="3dp"
        app:markerSize="24dp" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/stepsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/shortDescriptionImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/short_description_content_description"
                    app:srcCompat="@drawable/ic_thought" />

                <ImageView
                    android:id="@+id/stepDescriptionImageView"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/step_description_content_description"
                    app:srcCompat="@drawable/ic_food" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stepShortDescriptionTextView"
                    style="@style/ingredientQuantityListTextStyle"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/short_description_label"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/stepDescriptionTextView"
                    style="@style/cakeListTextStyle"
                    android:layout_gravity="start"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/description_label"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/recipeThumbnailImageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/thumbnail_image_content_description"
                app:srcCompat="@drawable/ic_launcher" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>