<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredientsCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="1dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/ingredientsTextView"
            style="@style/ingredientListTextStyle"
            android:text="@string/ingredient_label"
            app:autoSizeMaxTextSize="@dimen/ingredient_max_text_size"
            app:autoSizeMinTextSize="@dimen/ingredient_min_text_size"
            app:autoSizeTextType="uniform"
            tools:ignore="MissingPrefix" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingredientsQuantityTextView"
                style="@style/ingredientQuantityListTextStyle"
                android:text="@string/quantity_label" />


            <ImageView
                android:id="@+id/ingredientsMeasuringImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/measuring_unit_content_description"
                app:srcCompat="@drawable/ic_kilogram" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

